; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/kill/extr_kill.c_ExecuteKill.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/kill/extr_kill.c_ExecuteKill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Killing PID %ld...\0A\00", align 1
@PROCESS_TERMINATE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [43 x i8] c"Could not open the process with PID = %ld\0A\00", align 1
@.str.2 = private unnamed_addr constant [48 x i8] c"Could not terminate the process with PID = %ld\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ExecuteKill(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @atol(i8* %6)
  store i64 %7, i64* %5, align 8
  %8 = load i32, i32* @stderr, align 4
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @fprintf(i32 %8, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i64 %9)
  %11 = load i32, i32* @PROCESS_TERMINATE, align 4
  %12 = load i64, i64* @FALSE, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32* @OpenProcess(i32 %11, i64 %12, i64 %13)
  store i32* %14, i32** %4, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = icmp eq i32* null, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = load i32, i32* @stderr, align 4
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @fprintf(i32 %18, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0), i64 %19)
  store i32 0, i32* %2, align 4
  br label %33

21:                                               ; preds = %1
  %22 = load i64, i64* @FALSE, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = call i64 @TerminateProcess(i32* %23, i32 0)
  %25 = icmp eq i64 %22, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %21
  %27 = load i32, i32* @stderr, align 4
  %28 = load i64, i64* %5, align 8
  %29 = call i32 @fprintf(i32 %27, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0), i64 %28)
  store i32 0, i32* %2, align 4
  br label %33

30:                                               ; preds = %21
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @CloseHandle(i32* %31)
  store i32 0, i32* %2, align 4
  br label %33

33:                                               ; preds = %30, %26, %17
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @atol(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i64) #1

declare dso_local i32* @OpenProcess(i32, i64, i64) #1

declare dso_local i64 @TerminateProcess(i32*, i32) #1

declare dso_local i32 @CloseHandle(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
